# llm-flight-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  database.py  demo.py  docker-compose.yml  logger.py  main.py  pyproject.toml  requirements.txt
agents/food_agent/: food_search_agent.py
agents/retrieval/: index.py  retrieval_agent.py
config/: setting.py  settings.py
core/: agent_factory.py  graph.py  nodes.py  state.py  states.py
docs/superpowers/plans/: 2026-07-20-controlled-langgraph-workflow.md
faiss_index_openai_embeddings/: index.faiss  index.pkl
observability/: __init__.py  langfuse_setup.py
param/: params.py
prompts/: prompt_template.py
safety/: __init__.py  guardrails.py
scripts/: migrate.py  setup.py
src/: __init__.py  cli.py
src/agents/: __init__.py
src/agents/food_agent/: __init__.py  food_search_agent.py
src/agents/retrieval/: __init__.py  retrieval_agent.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: __init__.py  chat.py  health.py
src/core/: __init__.py  config.py  graph.py  nodes.py  states.py
src/param/: __init__.py  params.py
src/prompts/: __init__.py  prompt_template.py
src/utils/: __init__.py  logger.py
tests/: test_food_search_agent.py  test_graph_nodes.py  test_guardrails.py  test_settings.py
