[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-flight-agent"
version = "2.0.0"
description = "Nha Trang trip planner agent with LangGraph, RAG, tools, guardrails, and Langfuse"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "langgraph>=1.0,<2",
    "langchain>=1.0,<2",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "openai>=1.0",
    "langfuse>=3.0",
    "google-search-results>=2.4",
    "pypdf>=4.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "config*", "core*", "observability*", "param*", "prompts*", "safety*"]
